--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,4 @@ bnp/buildtools/m4/config/depcomp
 bnp/buildtools/m4/config/install-sh
 bnp/buildtools/m4/config/ltmain.sh
 bnp/buildtools/m4/config/missing
-
+.keep
